robballen75-Salesforce/4-7-15/src/objects/MS_Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Area_of_Effort__c</fullName>
        <formula>Text(Assignment__r.Area_of_Effort__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area of Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <referenceTo>MS_Assignment__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>R00N50000001u8jtEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>TE: Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effort_type__c</fullName>
        <label>Effort Type</label>
        <picklist>
            <picklistValues>
                <fullName>CAS/SMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrossRef/Regex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ribbon/Macro Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rule Configuration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Time_Entry_Owner__c</fullName>
        <label>Legacy Time Entry Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Post_Sales__c</fullName>
        <inlineHelpText>Please enter whether this work is pre-sales (before we have a signed agreement) or post-sales (after we have a signed agreement).</inlineHelpText>
        <label>Pre/Post Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MS_Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>R00N50000001u8juEAA</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TE_Billable_Not_Chargeable__c</fullName>
        <description>Work that should be billable but isn’t. This might be because of customer sensitivity.  As an example, at Abbott, we did billable work beyond the hours in the project because they are a big client, we felt we had fair compensation for the overall scope of the project, and they were not in a position to approve additional project dollars.  When time is logged into this category, the expectation is that it could be presented to the customer.  It is really billable work that for some reason we could not bill the client for it.</description>
        <inlineHelpText>Use to log project time which should / could be billable, as it is above scope or the customer refuses to pay for the effort and we “give it away” – needs to be reportable/ presentable to a firm</inlineHelpText>
        <label>TE:  Hours-BILLABLE (Not Chargeable)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TE_Hours_NON_BILLABLE_Internal__c</fullName>
        <description>Used for any time that we cannot bill to the customer because of some “issue” on our side.  This includes things like working through product problems, improper configuration effort resulting in re-configuration and mis-scoping.  A client might never be presented with the work that is captured in this category.
 
i) We have extra work to do due to our mistake. 
ii) We have product issues we are troubleshooting. 
iii) We assign an extra person for training purposes (shadowing). 
iv) We fail to notify a customer that the hours for the project are exceeding the original estimate. 
v) The work is internal work. In other words, if you’re working on an internal project, please record all of the time as Non-billable. 
vi) Anything we agreed not to charge the customer for</description>
        <inlineHelpText>Time that cannot be billed to the customer because of reasons on our side.  It does NOT include work that could/should be billable.</inlineHelpText>
        <label>TE: Hours-NON-BILLABLE (Internal)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Time Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Dollar_Equivalent__c</fullName>
        <formula>IF (Project__r.Project_Hours__c&gt;0,
(CASE(Pre_Post_Sales__c,&quot;Post-Sales&quot;, ( Time_Entry_Hours__c / Project__r.Project_Hours__c) * (Project__r.Change_Order_Amount__c + Project__r.Paid_Amount__c +     Project__r.Pre_Paid_Amount__c ),0)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Entry Dollar Equivalent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Hours_NON_BILLABLE__c</fullName>
        <inlineHelpText>Used to track non-billable time prior to 2010.  Do not use after 1/1/2011</inlineHelpText>
        <label>TE:  Hours-NON BILLABLE (LEGACY)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Hours__c</fullName>
        <inlineHelpText>Log time in 15 minute increments.  
15 minutes = .25 hours
30 minutes = .50 hours
45 minutes = .75 hours</inlineHelpText>
        <label>TE:  Hours-BILLABLE</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Time Entry #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>